# agent-forge

./: .gptmeignore  .hook_timestamp  .mise.toml  AGENT_DEVELOPER_README.md  GEMINI.md  IMPLEMENTATION_REPORT.md  PRD.md  README.md  SYSTEM_ARCHITECTURE.md  TASK.md  agentfile.py  cli-package.json  cli.py  convert_letta_to_agentforge.py  demo_format_adaptation_expert.py  demo_integration_architect.py  demo_systems_analyst.py  example_usage.py  main.py  mock_naming_rules.md  orchestrator.py  pyproject.toml  test_format_adaptation_expert.py  test_master_templater.py  test_systems_analyst.py
agents/: README.md  __init__.py  agent_developer.py  base.py  engineering_manager.py  format_adaptation_expert.py  integration_architect.py  master_templater.py  naming_strategies.py  systems_analyst.py  talent_scout.py  talent_scout_enhanced.py  utility_agents.py
core/: __init__.py  agent_generator.py  orchestrator.py  vector_store.py
docs/: API_REFERENCE.md  CLI_ARCHITECTURE.md  CLI_IMPLEMENTATION_PLAN.md  DEPLOYMENT_GUIDE.md  DEVELOPER_GUIDE.md  ENHANCED_TALENT_SCOUT_README.md  FAQ.md  FEEDBACK.md  FINAL_TEST_REPORT.md  HANDS_ON_TUTORIAL.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_SYSTEMS.md  MCP_INTEGRATION.md  MCP_SERVER_GUIDE.md  PRD.md  README.md  TASK.md  TUTORIAL_QUICK_REFERENCE.md  USER_GUIDE.md  VALIDATION_REPORT.md  mock_prd.md  mock_task.md  sample_tech_stack.md
examples/: mcp_usage_examples.md  tutorial_examples.py
mcp_server/: __init__.py  config.json  setup.sh  team_server.py
mock_agents_folder/: README.md
scripts/: demo_agent_developer.py  demo_master_templater.py  (+2 more)
(+28 files in other folders)
