[project]
name = "agent-forge"
version = "0.1.0"
description = "AgentForge - Meta-agent system for building specialized agent teams"
requires-python = ">=3.12"

dependencies = [
    "agno>=2.0.2",
    "fastapi[standard]>=0.116.1",
    "mcp>=1.13.1",
    "openai>=1.107.0",
    "openrouter>=1.0",
    "sqlalchemy>=2.0.43",
    "lancedb>=0.16.0",
    "pydantic>=2.0.0",
    "qdrant-client>=1.7.0",
    "sentence-transformers>=2.2.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "ollama>=0.5.3",
    "fastembed>=0.7.0",
    "aiohttp>=3.12.15",
]


[project.scripts]
agentforge = "cli:app"

[project.entry-points."console_scripts"]
agentforge = "cli:app"
